| Bug #16581 | deadlock: server and client both read from connection in 'conc_sys' test | ||
|---|---|---|---|
| Submitted: | 17 Jan 2006 20:29 | Modified: | 18 Aug 2006 11:38 |
| Reporter: | Carsten Segieth | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Locking | Severity: | S2 (Serious) |
| Version: | 5.0.17a-cert | OS: | Any (any) |
| Assigned to: | Tomash Brechko | Target Version: | |
[18 Jan 2006 16:13]
Carsten Segieth
- please see my new comments in bug#16372 - it looks that both bugs are related as on a random base sometimes a locking situation and a crash occurs.
[23 Apr 2006 20:11]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/5367
[23 Jun 2006 9:24]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/8132
[20 Jul 2006 11:46]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/9377
[28 Jul 2006 11:06]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/9699
[2 Aug 2006 15:52]
Konstantin Osipov
Pushed into 5.0.25
[14 Aug 2006 21:21]
Konstantin Osipov
Merged into 5.1.12
[18 Aug 2006 11:38]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix in 5.0.25 & 5.1.12 changelogs.

Description: running the test suite 'conc_sys' shows a situation where the access on INFORMATION_SCHEMA seems to lock the server. The situation starts soon after the test is started and after ~3-5 min (nearly) all of the 15 configured threads are sleeping. $ mysqladmin -P9306 -uroot -h127.0.0.1 proc +------+------+------------------------------+--------------------+---------+------+----------------+----------------------------------------------------------------------------------------+ | Id | User | Host | db | Command | Time | State | Info | +------+------+------------------------------+--------------------+---------+------+----------------+----------------------------------------------------------------------------------------+ | 67 | root | qa-suse9-x86.mysql.com:33602 | information_schema | Sleep | 397 | | | ...some rows removed here... | 5630 | root | qa-suse9-x86.mysql.com:41637 | information_schema | Sleep | 5 | | | | 5671 | root | qa-suse9-x86.mysql.com:41678 | information_schema | Query | 0 | Opening tables | select table_catalog from columns union all select table_catalog from tables limit 0,5 | | 5679 | root | qa-suse9-x86.mysql.com:41686 | db_storedproc | Sleep | 0 | | | | 5680 | root | localhost:3495 | | Query | 0 | | show processlist | +------+------+------------------------------+--------------------+---------+------+----------------+----------------------------------------------------------------------------------------+ How to repeat: - run conc_sys test with windows as server and a Linux as client